# cmd-proposer

./: .gitignore  Cargo.toml  deny.toml  justfile  lefthook.yml
crates/cps/: Cargo.toml
crates/cps-agent/: Cargo.toml
crates/cps-agent/src/: agent_loop.rs  budget.rs  lib.rs  message_manager.rs  session.rs  subagent.rs  system_prompt.rs  tools.rs
crates/cps-budget/: Cargo.toml
crates/cps-budget/src/: lib.rs
crates/cps-config/: Cargo.toml
crates/cps-config/src/: init.rs  interpolate.rs  lib.rs  load.rs
crates/cps-doc-runner/: Cargo.toml
crates/cps-doc-runner/src/: lib.rs  schema.rs
crates/cps-doc-store/: Cargo.toml
crates/cps-doc-store/src/: lib.rs
crates/cps-exec/: Cargo.toml
crates/cps-exec/src/: lib.rs
crates/cps-llm/: Cargo.toml
crates/cps-llm/src/: client.rs  error.rs  lib.rs  stream.rs  types.rs
crates/cps-policy/: Cargo.toml
crates/cps-policy/src/: checker.rs  lib.rs
crates/cps-proposal/: Cargo.toml
crates/cps-proposal/src/: lib.rs
crates/cps-search/: Cargo.toml
crates/cps-search/src/: lib.rs
crates/cps-tokenizer/: Cargo.toml
crates/cps-tokenizer/src/: lib.rs
crates/cps-ui/: Cargo.toml
crates/cps-ui/src/: lib.rs
crates/cps/src/: main.rs
scripts/hooks/: branch-protection.sh  check-charset.sh  check-generated-artifacts.sh  check-version-bumped.sh  find-monolith-files.sh  format-staged-rust.sh  post-merge-rebuild.sh  review-check.sh
