[workspace]
resolver = "2"
members = [
    "crates/cps",
    "crates/cps-config",
    "crates/cps-budget",
    "crates/cps-tokenizer",
    "crates/cps-doc-store",
    "crates/cps-doc-runner",
    "crates/cps-policy",
    "crates/cps-llm",
    "crates/cps-agent",
    "crates/cps-proposal",
    "crates/cps-search",
    "crates/cps-exec",
    "crates/cps-ui",
]

[workspace.package]
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/RyderFreeman4Logos/cmd-proposer"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
cps-config = { path = "crates/cps-config" }
cps-budget = { path = "crates/cps-budget" }
cps-tokenizer = { path = "crates/cps-tokenizer" }
cps-doc-store = { path = "crates/cps-doc-store" }
cps-doc-runner = { path = "crates/cps-doc-runner" }
cps-policy = { path = "crates/cps-policy" }
cps-llm = { path = "crates/cps-llm" }
cps-agent = { path = "crates/cps-agent" }
cps-proposal = { path = "crates/cps-proposal" }
cps-search = { path = "crates/cps-search" }
cps-exec = { path = "crates/cps-exec" }
cps-ui = { path = "crates/cps-ui" }

# External
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
regex = "1"
dirs = "5"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1"
duckduckgo = "0.3"
rustyline = "15"
