[package]
name = "cps-budget"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Token budget computation (% of effective_context) for cmd-proposer"

[dependencies]
cps-config.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
