[package]
name = "cps-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "cmd-proposer config parsing, defaults, validation, env var interpolation"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
regex.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
