[package]
name = "cps-doc-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "bwrap sandbox execution for --help/man/info commands"

[dependencies]
cps-config.workspace = true
cps-doc-store.workspace = true
cps-tokenizer.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
