[package]
name = "cps-doc-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "In-memory doc storage with grep/section/lines/expand retrieval for cmd-proposer"

[dependencies]
cps-tokenizer.workspace = true
regex.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
