[package]
name = "cps-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Execution runner and audit logging for cmd-proposer (argv-only, default OFF)"

[dependencies]
cps-proposal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
