[package]
name = "cps-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Web search providers and query redaction for cmd-proposer"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cps-doc-store.workspace = true
cps-tokenizer.workspace = true
duckduckgo.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
