[package]
name = "cps-tokenizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HuggingFace tokenizer.json integration for cmd-proposer"

[dependencies]
cps-config.workspace = true
tokenizers.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
